<resources>
    <string name="app_name">Menu App</string>
    <string name="logo">logo</string>
    <string name="main_course">Main Course</string>
    <string name="todo">TODO</string>
    <string name="check_out">Check Out</string>
    <string name="asd">TODO</string>
    <string name="image">TODO</string>
    <string name="butoon">TODO</string>
    <string name="button">TODO</string>
    <string name="drinks">Drinks</string>
    <string name="chicken_adobo_php_200">Chicken Adobo..........PHP 200</string>
    <string name="thank_you_for_ordering">Thank you for ordering!</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_username">Email/Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">signup</string>
    <string name="login">Login</string>
    <string name="total">Total:</string>
    <string name="customer_contact">Customer Contact</string>
    <string name="customer_address">Customer Address</string>
    <string name="customer_name">Customer Name</string>
    <string name="email_address">Email Address</string>
    <string name="email_addresss">Email Address</string>
    <string name="customer_details">Customer Details</string>
</resources>